--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,14 +2,14 @@
 {
     "name": "🦜", 
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-    "image": "mcr.microsoft.com/vscode/devcontainers/python:3.12",
+    "image": "mcr.microsoft.com/vscode/devcontainers/python:3.10",
     // pip install needed python packages on creation
-    //"postCreateCommand": "pip install -r requirements.txt",
+    "postCreateCommand": "pip install -r requirements.txt",
     "mounts": [
       // Mount the local .ssh directory so you can use SSH key-based authentication.
-      //"source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
-      // Mount the local .gitconfig file so you can configure Git user settings.
-      //"source=${localEnv:HOME}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
+      "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
+      // // Mount the local .gitconfig file so you can configure Git user settings.
+      // "source=${localEnv:HOME}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
 			],
 			"customizations": {
 				"vscode": {
@@ -53,4 +53,3 @@
     // Features to add to the dev container. More info: https://containers.dev/features.
     // "features": {}
   }
-   
