--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+BeautifulSoup4
+python-dotenv
 langchain
 langchain_core
 langchain_openai
@@ -5,4 +7,3 @@ langchain_anthropic
 langchain_community
 langgraph
 langchain_text_splitters
-bs4
